better layout + lose message

--- a/css/style.css
+++ b/css/style.css
@@ -6,11 +6,10 @@ header, footer {
     height: 80px;
 }
 
-#playBoard {
+.board {
     height: 500px;
     width: 500px;
     border: 1px solid white;
-    position: relative;
 }
 
 .square {
